--- a/styles.css
+++ b/styles.css
@@ -2,26 +2,41 @@ body{
   margin: 0;
 }
 
+#header-container{
+  text-align: center;
+}
+
+#header{
+  margin: 0;
+  height: 75px;
+  font-family: 'Baloo Bhaina', cursive;
+  font-size: 45px;
+}
+
 /*=== PAGE CONTAINER ===*/
 #page-container{
-  width: 400px;
-  margin: 10% auto;
-  background-color: #ff66ff;
+  width: 450px;
+  margin: auto;
+  background-color: #f2f2f2;
   overflow: auto;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 /*=== FORM CONTAINER ===*/
 
 #form-container{
   margin: 20px;
+  text-align: center;
 }
 
 .form-input{
   box-sizing: border-box;
   padding: 0 5px;
-  height: 30px;
-  width: 120px;
-  border: 1px solid black;
+  height: 40px;
+  width: 160px;
+  border: 1px solid #cccccc;
+  font-size: 16px;
+  border-radius: 2px;
 }
 
 #submit-button, #logout-button{
@@ -29,13 +44,15 @@ body{
   display: inline-block;
   padding: 0;
   /*margin: 0;*/
-  height: 30px;
+  height: 40px;
   width: 120px;
   color: black;
   background-color: white;
-  border: 1px solid black;
+  border: 1px solid #cccccc;
+  font-size: 16px;
   text-align: center;
   cursor: pointer;
+  border-radius: 2px;
 }
 
 #submit-button:hover, #logout-button:hover, .addBtn:hover{
@@ -51,16 +68,20 @@ body{
 
 #name-container{
    margin: 20px;
+   text-align: center;
 }
 
 #name-display{
   margin: 0;
   font-size: 30px;
+  font-family: 'Rubik', sans-serif;
 }
 
 /*=== PRODUCT AREA ===*/
 #product-container{
  margin: 20px;
+ padding: 0 60px;
+
 }
 
 .product-row{
@@ -72,6 +93,7 @@ body{
   height: 30px;
   width: 100px;
   font-size: 20px;
+  font-family: 'Rubik', sans-serif;
 }
 
 .adder{
@@ -80,25 +102,28 @@ body{
   height: 30px;
   width: 50px;
   font-size: 15px;
-  border: 1px solid black;
+  border: 1px solid #cccccc;
+  text-align: center;
+  border-radius: 2px;
 }
 
 .addBtn{
-  position: relative;
-  left: 275px;
   padding: 0;
   /*margin: 0;*/
-  height: 30px;
-  width: 100px;
+  height: 40px;
+  width: 200px;
   color: black;
   background-color: white;
-  border: 1px solid black;
+  border: 1px solid #cccccc;
   text-align: center;
   cursor: pointer;
+  border-radius: 2px;
+  font-size: 20px;
 }
 
 .total-label{
-  margin: 0 0 0 100px;
+  margin: 0 0 0 20px;
+  font-family: 'Rubik', sans-serif;
 }
 
 .total{
@@ -107,9 +132,17 @@ body{
   height: 30px;
   width: 50px;
   font-size: 15px;
-  border: 1px solid black;
+  border: 1px solid #cccccc;
+  text-align: center;
+  border-radius: 2px;
 }
 
 .product-name, .adder, .total-label, .total, .addBtn{
   display: inline-block;
+}
+
+/*=== ADD CONTAINER ===*/
+#add-container{
+  margin: 20px;
+  text-align: center;
 }
